# numerical-kernel-lab

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  run_all.py
.github/workflows/: lint.yml
benchmarks/: __init__.py  dot_product.py  iterative_solver.py  matrix_mul.py  polynomial_eval.py  results.md
docs/: design.md  notes.md
examples/: dot_product_hip.cpp  matrix_mul_hip.cpp  reduction_hip.cpp
scripts/: bench.py  run_all.sh
utils/: gpu_monitor.py  report_generator.py
